--- a/main.css
+++ b/main.css
@@ -25,7 +25,9 @@ body {
     margin:0px;
 }
 img {
-    max-height: 600px;
+    max-height: 700px;
+    display: block;
+    width: 100%;
 }
 
 .container {
@@ -75,3 +77,34 @@ img {
         transform: translate(20%,-20%);
     }
 }
+
+h2 {
+    text-align: center;
+    color:#007bff;
+    font-size: 40px;
+    font-weight: 900;
+}
+
+article {
+    display:inline-block;
+    width:30%;
+    line-height: 1.7;
+    color: gray;
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+figure{
+    display:inline-block;
+    width:50%;
+    margin-left: 5%;
+    float: right;
+}
+@media only screen and (max-width: 800px) {
+    figure {
+      width: 100%;
+    }
+    article{
+        width:100%;
+    }
+  }
