--- a/main.css
+++ b/main.css
@@ -112,11 +112,18 @@ figure{
     opacity: 0;
   }
 
-  @media only screen and (max-width: 800px) {
+  @media only screen and (max-width: 1300px) {
     figure {
       width: 100%;
+      margin-left: 0px ;
+      margin-top:20px !important;
     }
     article{
         width:100%;
     }
+  }
+
+
+  #maps{
+      
   }
