--- a/main.css
+++ b/main.css
@@ -192,3 +192,9 @@ figure{
     font-size: 30px;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 1100px) {
+    #car0 , #car2 {
+        display: none;
+    }
+  }
