--- a/main.css
+++ b/main.css
@@ -199,6 +199,12 @@ figure{
     }
   }
 
+  @media only screen and (max-width: 1100px) {
+    h3 {
+        font-size: 24px;
+    }
+  }
+
   .carousal-par{
         position: absolute;
         bottom: 55px;
@@ -222,12 +228,6 @@ figure{
       left:30%;
   }
 
-  table {
-      width:100%;
-      border-collapse: collapse;
-      backface-visibility: hidden;
-      background-color: white;
-  }
 
   td,th,table {
       border-bottom:1px solid;
@@ -243,11 +243,20 @@ figure{
       color:#fc99f4;
   }
 
+  table {
+    width:100%;
+    border-collapse: collapse;
+    background-color: white;
+}
 
   #details {
       position :absolute;
+      top:0px;
       width:100%;
-      height: 360px;
-      background-color: aqua;
+      height: 430px;
+      background-image: url("assets/back1.svg");
+      backface-visibility: hidden;
       transform: rotateY(180deg);
+      color:white;
+      -webkit-perspective: 1000;
   }
