--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ nav {
 body {
     padding:0px;
     margin:0px;
+    overflow-y:hidden;
 }
 img {
     max-height: 400px;
@@ -282,3 +283,63 @@ figure{
     max-width: 20px;
     cursor: pointer;
   }
+
+  #spinner {
+      background-color: #2980b9;
+      position: fixed;
+      top:0;
+      left:0;
+      width:100%;
+      height: 100%;
+      z-index: 1000;
+    }
+
+    .loading {
+        position: absolute;
+        top:50%;
+        left:50%;
+        transform: translate(-50%,-50%);
+        height: 40px;
+        display: flex;
+        align-items: center;
+    }
+
+    .obj{
+        width: 5px;
+        height :40px;
+        background-color: white;
+        margin:0px 3px;
+        border-radius: 10px;
+        animation:loading 0.8s infinite;
+    }
+
+    .obj:nth-child(2){
+       animation-delay: 0.1s; 
+    }
+
+    .obj:nth-child(3){
+        animation-delay: 0.2s; 
+     }
+
+     .obj:nth-child(4){
+        animation-delay: 0.3s; 
+     }
+
+     .obj:nth-child(5){
+        animation-delay: 0.4s; 
+     }
+
+     .obj:nth-child(6){
+        animation-delay: 0.5s; 
+     }
+    @keyframes loading {
+        0% {
+            height: 0;
+        }
+        50% {
+            height: 40px;
+        }
+        100%{
+            height: 0;
+        }
+    }
