added scroll up button

--- a/main.css
+++ b/main.css
@@ -24,6 +24,7 @@ body {
     padding:0px;
     margin:0px;
     overflow-y:hidden;
+    overflow-x:hidden;
 }
 img {
     max-height: 400px;
@@ -230,6 +231,10 @@ figure{
     #car1 {
         width:auto !important;
     }
+    #up {
+        display: inline-block !important;
+        border:outset;
+    }
   }
 
   .carousal-par{
@@ -358,4 +363,15 @@ figure{
         100%{
             height: 0;
         }
+    }
+
+    #up { 
+        background-color: #007bff;
+        border-radius: 50%;
+        width:10%;
+        font-size: 24px;
+        position: fixed;
+        bottom:5%;
+        right:15%;
+        display:none;
     }
